fix bug in demo component causing trouble in IE9

--- a/src/components/demo/demo.html
+++ b/src/components/demo/demo.html
@@ -21,7 +21,7 @@
 		<slot class="markup" name="markup"></slot>
 
 		<div class="highlight">
-			<pre><code v-html="snippet">{{snippet}}</code></pre>
+			<pre><code v-html="snippet"></code></pre>
 		</div>
 	</div>
 
