add responsiveness to the docs by implementing off-canvas-menu component

--- a/src/components/demo/demo.html
+++ b/src/components/demo/demo.html
@@ -7,7 +7,7 @@
 	<div class="m-b"></div>
 
 	<div class="alert alert-info" role="alert" v-if="meta.note">
-  	<icon background="circle-outline" size="sm" variant="info" text="i"></icon> <span v-html="meta.note"></span>
+  	<!--<icon background="circle-outline" size="sm" variant="info" text="i"></icon>--> <span v-html="meta.note"></span>
 	</div>
 
 	<div class="m-b-md"></div>
