finalise docs layout with offcanvas as part of the component itself

--- a/src/components/docs/docs.scss
+++ b/src/components/docs/docs.scss
@@ -23,8 +23,7 @@ h2 {
 h3 {
     font-size: 1.3rem !important;
 }
-#docs-pages {
-    overflow-x: hidden;
+#main {
     > .navbar {
         padding: 0.2em 0 !important;
         line-height: 3em;
